vyre-macros/tests/ui/bad_define_op_input_type.stderr
error: expected string literal. Fix: use string type names such as ["u32"].
 --> tests/ui/bad_define_op_input_type.rs:7:15
  |
7 |     inputs = [1],
  |               ^
